# RPAAssignment

./: .dockerignore  .env  Dockerfile  Readme.md  docker-compose.yml  entrypoint.sh  main.py  migrate.sh  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 096a42c0c160_updated_video_title_to_null.py  1cfd7046fa36_updated_video_model_added_length_and_.py  208f41ecf934_added_status_as_choice_filed_and_remarks.py  2a9fa4513d6d_removed_title_field.py  b38d6e6edceb_initial.py  ba5e60aaab49_added_video_status_filed.py  be7b2a6568b5_updated_to_enum_type_on_choice_field.py  f9f88ff6f179_added_canceled_choise.py
core/: dependencies.py  enums.py  models.py  routes.py  schema.py  services.py  views.py
videostore/: db_init.py  settings.py
worker/: .dockerignore  Dockerfile  entrypoint.sh  requirements.txt  woker_init.py  worker_init.py
