[tool.poetry]
name = "rpaassignment"
version = "0.1.0"
description = ""
authors = ["Neeraj319 <itskop520@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
python-dotenv = "^0.20.0"
black = "^22.6.0"
SQLAlchemy = "^1.4.39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
